2022-02-28  Michael Catanzaro  <mcatanzaro@gnome.org>

        -Wodr warning spam caused by ENABLE(BINDING_INTEGRITY)
        https://bugs.webkit.org/show_bug.cgi?id=229867
        <rdar://problem/82975115>

        Reviewed by Carlos Garcia Campos.

        Build WebKit with -Wno-odr. This warning is not salvagable, and it's impossible to suppress
        locally.

        * Source/cmake/WebKitCompilerFlags.cmake:

 2022-02-24  Matt Woodrow  <mattwoodrow@apple.com>

         Unreviewed, update my (Matt Woodrow) status to committer.

         * metadata/contributors.json:

2022-02-25  Zan Dobersek  <zdobersek@igalia.com>

        [GTK][WPE] Uncouple libgbm, libdrm dependencies from ANGLE functionality
        https://bugs.webkit.org/show_bug.cgi?id=237199

        Reviewed by Chris Lord.

        For both GTK and WPE, unconditionally search for the libgbm and libdrm
        dependencies as they will also be needed outside of ANGLE functionality.
        USE_ANGLE is defined along with USE_NICOSIA, but still only if the
        relevant option was enabled.

        * Source/cmake/OptionsGTK.cmake:
        * Source/cmake/OptionsWPE.cmake:

2022-02-25  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. [GTK] Bump version numbers

        * Source/cmake/OptionsGTK.cmake:

2022-02-24  Ryosuke Niwa  <rniwa@webkit.org>

        Explain visit children and opaque roots in Introduction.md
        https://bugs.webkit.org/show_bug.cgi?id=236894

        Reviewed by Saam Barati.

        Added the descriptions of visit children and opaque roots
        as well as how to add IDL files.

        * Introduction.md:

2022-02-23  Elliott Williams  <emw@apple.com>

        [XCBuild] Don't automatically use the ../Internal/WebKit workspace
        https://bugs.webkit.org/show_bug.cgi?id=237115

        Reviewed by Alexey Proskuryakov.

        When the USE_WORKSPACE=YES Make flag was added in https://commits.webkit.org/246232@main, we